--- a/Applications/04-Single-Page-Applications-lab/apps-autoparts-demo/site.css
+++ b/Applications/04-Single-Page-Applications-lab/apps-autoparts-demo/site.css
@@ -9,3 +9,26 @@ body {
 label {
     display: block;
 }
+
+#notification {
+    display: none;
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
+    width: 300px;
+}
+
+#notification p {
+    background-color: aquamarine;
+    padding: 16px 32px;
+    margin-top: 8px;
+}
+
+.error {
+    color: red;
+}
+
+.paginator a {
+    margin-left: 4px;
+    margin-right: 4px;
+}
